<resources>
    <string name="app_name">enKarma</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">btCMD79AhKDVa8NlUgbfvKPXek3EpAp8QXRbV5rE</string>
    <string name="back4app_client_key">fpCBGVMAfZ8eBLgyROWq3ce6k9LxAAc50XbQqhNo</string>
    <string name="twitter_consumer_key">JC0QIlQseo9NPaqkYuD0biO9J</string>
    <string name="twitter_consumer_secret">9ya6C5lEYqqPHj0y2GuNEdDIzRklj51OUobb9SR6nkfncnAZm3</string>
    <string name="sandhya_time">Time to Do: %1$s</string>
    <string name="show_text">ஸந்தியா வந்தனம்</string>
    <string name="welcome_message">Welcome to enkarma!</string>
    <string name="sandyavandanam">SandyaVandanam</string>
    <string name="tharpanam">Tharpanam</string>
    <string name="pariseshanam">Pariseshanam</string>
    <string name="sandya_time">Sandya Time</string>
    <string name="type_of_sandya">Type of Sandya</string>
    <string name="your_name">Your Name</string>
    <string name="sandya">Sandya</string>
    <string name="gayathri_japam">Gayathri Japam</string>
    <string name="sandya_vandanam">SANDYA VANDANAM</string>
    <string name="mathyanam">மாத்யாநிஹம்</string>
    <string name="sayamsandya">ஸாயமஸந்தியா</string>
    <string name="prathasandya">ப்ராத்தஸந்தியா</string>
    <string name="result">Result</string>
    <string name="geo_location">இடம் (GeoLocation):</string>
    <string name="Year">வருடம் (Year):</string>
    <string name="ayanam">அயனம் (Ayana):</string>
    <string name="season">ருது (Season-காலம்):</string>
    <string name="Rasi">ராசி (Rasi):</string>
    <string name="Paksha">பக்‌ஷம் (Paksha):</string>
    <string name="Thithi">திதி (Thithi):</string>
    <string name="Day">கிழமை (Day):</string>
    <string name="Natchatram">நட்ஷத்ரம் (Natchatram):</string>
    <string name="Yogam">யோகம் (Yogam):</string>
    <string name="Karanam">கரணம் (Karanam):</string>
    <string name="Notes">(Above Data is considered with reference to Chennai, India)</string>
    <string name="FatherLiving">Father Living</string>
    <string name="FatherDeceased">Father Deceased</string>
    <string name="MotherLiving">Mother Living</string>
    <string name="MotherDeceased">Mother Deceased</string>
    <string name="MotherMotherDeceased">Mother-Mother Deceased</string>
    <string name="MotherMotherLiving">Mother-Mother Living</string>
    <string name="FatherMotherLiving">Father-Mother Living</string>
    <string name="FatherMotherDeceased">Father-Mother Deceased</string>
    <string name="Proceed">Proceed</string>
    <string name="your_father_name">Your Father Name</string>
    <string name="YourName">Your Name</string>
    <string name="Living">Living</string>
    <string name="Deceased">Deceased</string>
    <string name="YourFatherName">Your Father Name</string>
    <string name="Your_Grand_Father">Your GrandFather</string>
    <string name="Your_Grand_Father_Name">Your GrandFather Name</string>
    <string name="Your_Great_Grand_Father_Name">Your GreatGrandFather Name</string>
    <string name="Your_Great_Great_Grand_Father_Name">Your GreatGreatGrandFather Name</string>
    <string name="Mother_Side">
        <u>Mother Side</u>
    </string>
    <string name="Mother_Father_Name">Mother-Father Name</string>
    <string name="Mother_Grand_Father_Name">Mother-GrandFather Name</string>
    <string name="Mother_Father">Mother-Father</string>
    <string name="Mother_Great_GrandFather_Name">Mother-GreatGrandFather Name</string>
    <string name="amavasya">Amavasya</string>
    <string name="mahalaya">Mahalaya</string>
    <string name="Amavasya">AMAVASYA</string>
    <string name="Mahalaya">MAHALAYA</string>
    <string name="Change_Date">Change Date</string>
    <string name="Today_Date">Today Date</string>
    <string name="button_date_1">Button Date_1</string>
    <string name="day_s_willing_todo_tharpanam">Day(s) willing todo Tharpanam:</string>
    <string name="fifteen_days">Fifteen Days</string>
    <string name="your_mother_name">Mother Name</string>
    <string name="OneDay">One Day</string>
    <string name="NumberOfDays">Number Of Days</string>
    <string name="father_mother_name">Father-Mother Name</string>
    <string name="father_Grandmother_name">Father-Grandmother Name</string>
    <string name="father_GreatGrandmother_name">Father-Great Grand Mother Name</string>
    <string name="mother_mother_name">Mother-Mother Name</string>
    <string name="mother_grandmother_name">Mother-Grandmother Name</string>
    <string name="mother_greatgrandmother_name">Mother-GreatGrandmother Name</string>
    <string name="closeRelatives">Close Relatives</string>
    <string name="mother_grandmother_s_name">Mother-GrandMother Name</string>
    <string name="nameDeceased">. பெயர் .</string>
    <string name="பெயர்">பெயர்</string>
    <string name="add_person_name">Add Person Name</string>
    <string name="தோற்கைஆட்சி">தோற்கைஆட்சி</string>
    <string name="gothram">கோத்திரம்</string>
    <string name="relationship">உறவுமுறை</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="ஆண்பெண்">ஆண்/பெண்</string>
    <string name="கோத்திரம்">கோத்திரம்</string>
    <string name="உறவுமுறை">உறவுமுறை</string>
    <string name="ADD_EDIT_DECEASED_PERSONS">ADD/EDIT DECEASED PERSONS</string>
    <string name="PROCEED_TO_THARPANAM">PROCEED TO THARPANAM</string>
    <string name="Name">Name</string>
    <string name="Name2">Name2</string>
    <string name="Name6">Name6</string>
    <string name="Name5">Name5</string>
    <string name="Name4">Name4</string>
    <string name="Name3">Name3</string>
    <string name="Name1">Name1</string>
    <string name="Name7">Name7</string>
    <string name="Name8">Name8</string>
    <string name="Name9">Name9</string>
    <string name="Name10">Name10</string>
    <string name="Name11">Name11</string>
    <string name="Name12">Name12</string>
    <string name="Name13">Name13</string>
    <string name="Name14">Name14</string>
    <string name="Name15">Name15</string>
    <string name="BirthOrder1">BirthOrder1</string>
    <string name="BirthOrder2">BirthOrder2</string>
    <string name="BirthOrder3">BirthOrder3</string>
    <string name="BirthOrder4">BirthOrder4</string>
    <string name="BirthOrder5">BirthOrder5</string>
    <string name="BirthOrder6">BirthOrder6</string>
    <string name="BirthOrder7">BirthOrder7</string>
    <string name="BirthOrder8">BirthOrder8</string>
    <string name="BirthOrder9">BirthOrder9</string>
    <string name="BirthOrder10">BirthOrder10</string>
    <string name="BirthOrder11">BirthOrder11</string>
    <string name="BirthOrder12">BirthOrder12</string>
    <string name="BirthOrder13">BirthOrder13</string>
    <string name="BirthOrder14">BirthOrder14</string>
    <string name="BirthOrder15">BirthOrder15</string>
    <string name="gotram1">gotram1</string>
    <string name="gotram2">gotram2</string>
    <string name="gotram3">gotram3</string>
    <string name="gotram4">gotram4</string>
    <string name="gotram5">gotram5</string>
    <string name="gotram6">gotram6</string>
    <string name="gotram7">gotram7</string>
    <string name="gotram8">gotram8</string>
    <string name="gotram9">gotram9</string>
    <string name="gotram10">gotram10</string>
    <string name="gotram11">gotram11</string>
    <string name="gotram12">gotram12</string>
    <string name="gotram13">gotram13</string>
    <string name="gotram14">gotram14</string>
    <string name="gotram15">gotram15</string>
    <string name="relationship1">relationship1</string>
    <string name="relationship2">relationship2</string>
    <string name="relationship3">relationship3</string>
    <string name="relationship4">relationship4</string>
    <string name="relationship5">relationship5</string>
    <string name="relationship6">relationship6</string>
    <string name="relationship7">relationship7</string>
    <string name="relationship8">relationship8</string>
    <string name="relationship9">relationship9</string>
    <string name="relationship10">relationship10</string>
    <string name="relationship11">relationship11</string>
    <string name="relationship12">relationship12</string>
    <string name="relationship13">relationship13</string>
    <string name="relationship14">relationship14</string>
    <string name="relationship15">relationship15</string>
    <string name="SAVE_PERSON">SAVE PERSON</string>
    <string name="Add_New">ADD NEW PERSON</string>
    <string name="save">SAVE</string>
    <string name="time_now">Time Now</string>
    <string name="Completed">Completed</string>
    <string name="completed">COMPLETED</string>
    <string name="MAHALAYA">MAHALAYA</string>
    <string name="clear_all">CLEAR ALL</string>
    <string name="name1">Name1</string>
    <string name="mail">Mail</string>
    <string name="print">Print</string>
    <string name="pari">பரிசேஷணம்</string>
    <string name="todo">TODO</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be &gt;2 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="passwordd">Password</string>
    <string name="usernamee">Username</string>
    <string name="login">Login</string>
    <string name="skip">skip Login&gt;</string>
    <string name="new_here_nregister">New here? Register!</string>
    <string name="sign_upp">Sign Up</string>
    <string name="welcome_to_my_app">Welcome to enkarma!</string>
    <string name="logout">Logout</string>
    <string name="save_login">Save Login</string>
    <string name="remember">Save Login</string>
    <string name="Logout">Logout</string>
    <string name="About">About</string>
    <string name="back">Back</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="forget_password">&gt;&gt;Forget Password&gt;&gt;</string>
    <string name="enter_your_registered_email">Enter Your Registered Email</string>
    <string name="recoverPassword">Recover Password</string>
    <string name="tv_forgot_pass">Forgot Password?</string>
    <string name="forgot_password_msg">Enter your Registered Email and instructions on how to reset your password will
        be sent to you
    </string>
    <string name="enter_email">Enter Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="email">email</string>
    <string name="Email">Email</string>
    <string name="login_button">LOGIN</string>
    <string name="btn_forgot_password">Forgot Password</string>
    <string name="text_view_signup">SIGNUP</string>
    <string name="Register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="skip_login_button">skip Login&gt;&gt;&gt;&gt;</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="oops">Oops!</string>
    <string name="fill_all_fields">Please make sure you fill all the fields correctly</string>
    <string name="register_wait">Registering, please wait…</string>
    <string name="title_register_alert">Account Created Successfully!</string>
    <string name="message_register_alert_login_success">You can now login</string>
    <string name="message_register_alert_account_error">Account could not be created</string>
</resources>