<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SelectionActivity"
        android:background = "@drawable/yagyavalkyar">

    <Button
            android:text="@string/sandyavandanam" android:background="@drawable/mybutton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="368dp" android:layout_height="wrap_content" android:id="@+id/sandyaButton"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp" android:textStyle="bold"
            android:textColor="@android:color/background_light" android:textSize="24sp"/>
    <Button
            android:text="@string/pariseshanam" android:background="@drawable/mybutton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="318dp" android:layout_height="wrap_content" android:id="@+id/pariButton"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/sandyaButton"
            app:layout_constraintBottom_toTopOf="@+id/tharpanamButton"
            android:visibility="visible" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed" android:textColor="@android:color/background_light"
            android:textSize="24sp" android:textStyle="bold"/>
    <Button
            android:text="@string/tharpanam" android:background="@drawable/mybutton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="268dp" android:layout_height="wrap_content" android:id="@+id/tharpanamButton"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/pariButton" android:textColor="@android:color/background_light"
            android:textStyle="bold" android:textSize="24sp"/>

    <Button
            android:text="@string/About" android:background="@drawable/mybutton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="218dp" android:layout_height="wrap_content" android:id="@+id/about"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/tharpanamButton" android:textColor="@android:color/background_light"
            android:textStyle="bold" android:textSize="24sp"/>

    <Button
            android:id="@+id/button_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:paddingTop="@dimen/reset_medium_padding"
            android:layout_marginBottom="@dimen/reset_padding"
            android:textColor="#74071C"
            android:textSize="@dimen/nineteen_text"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/about"
            style="?android:attr/borderlessButtonStyle"/>


</androidx.constraintlayout.widget.ConstraintLayout>
